--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,12 @@ jobs:
       VERSION: 7.6.1
       ANSIBLE_VERSION: 2.14.2
     steps:
+      - name: Check out repository
+        uses: actions/checkout@v3
+
       - name: Update requirements.txt with Ansible version
         run: |
-          sed -i "s/^ansible-core==.*/ansible-core==${{ env.ANSIBLE_VERSION }}/" ../requirements.txt
+          sed -i "s/^ansible-core==.*/ansible-core==${{ env.ANSIBLE_VERSION }}/" requirements.txt
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
