--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,28 +12,32 @@ jobs:
       VERSION: 7.6.1
       ANSIBLE_VERSION: 2.14.2
     steps:
-      - 
-        name: Update requirements.txt with Ansible version
+      - name: Check out repository
+        uses: actions/checkout@v3
+        with:
+          ref: build  
+          
+      - name: Update requirements.txt with Ansible version
         run: |
           sed -i "s/^ansible-core==.*/ansible-core==${{ env.ANSIBLE_VERSION }}/" requirements.txt
-      -
-        name: cat requirements.txt
+
+      - name: cat requirements.txt
         run: |
           cat requirements.txt
-      -
-        name: Set up QEMU
+
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Login to Docker Hub
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           push: true
