--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,8 @@ jobs:
         run: |
           sed -i "s/^ansible-core==.*/ansible-core==${{ env.ANSIBLE_VERSION }}/" requirements.txt
 
-      - name: cat requirements.txt
-        run: |
-          cat requirements.txt
+      - name: Verify requirements.txt
+        run: cat requirements.txt
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
