--- a/.github/workflows/schedule-trigger.yml
+++ b/.github/workflows/schedule-trigger.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger Non-Default Branch Workflow
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           script: |
             const octokit = github.getOctokit(process.env.GITHUB_TOKEN);
@@ -17,7 +17,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               workflow_id: 'maintenance.yml',
-              ref: 'build'  # Replace 'non-default-branch' with the actual branch name
+              ref: 'non-default-branch'  # Replace 'non-default-branch' with the actual branch name
             });
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
