--- a/.github/workflows/schedule-trigger.yml
+++ b/.github/workflows/schedule-trigger.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Trigger Non-Default Branch Workflow
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const { owner, repo } = context.repo;
             await github.rest.actions.createWorkflowDispatch({
@@ -22,5 +23,3 @@ jobs:
               workflow_id: 'maintenance.yml',
               ref: 'build'  # Replace 'build' with the actual branch name if different
             });
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
