--- a/.github/workflows/schedule-trigger.yml
+++ b/.github/workflows/schedule-trigger.yml
@@ -16,10 +16,12 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const { owner, repo } = context.repo;
-            await github.rest.actions.createWorkflowDispatch({
-              owner: owner,
-              repo: repo,
-              workflow_id: 'maintenance.yml',
-              ref: 'build'  # Replace 'build' with the actual branch name if different
-            });
+            (async () => {
+              const { owner, repo } = context.repo;
+              await github.rest.actions.createWorkflowDispatch({
+                owner: owner,
+                repo: repo,
+                workflow_id: 'maintenance.yml',
+                ref: 'build'  # Replace 'build' with the actual branch name if different
+              });
+            })();
