--- a/.github/workflows/schedule-trigger.yml
+++ b/.github/workflows/schedule-trigger.yml
@@ -1,26 +1,17 @@
-name: Schedule Trigger
+name: Debug Trigger
 
 on:
-  schedule:
-    - cron: '*/5 * * * *'
-  push:
-    branches:
-      - main  # Replace with your default branch name
+  workflow_dispatch:
 
 jobs:
-  trigger:
+  debug:
     runs-on: ubuntu-latest
     steps:
-      - name: Trigger Non-Default Branch Workflow
+      - name: Debug GitHub Script
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
+            console.log('Debugging script execution');
             const { owner, repo } = context.repo;
-            const response = await github.rest.actions.createWorkflowDispatch({
-              owner: owner,
-              repo: repo,
-              workflow_id: 'maintenance.yml',
-              ref: 'build'  # Replace 'build' with the actual branch name if different
-            });
-            console.log(response);
+            console.log(`Owner: ${owner}, Repo: ${repo}`);
