--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
 name: Build Docker Container
 
 on:
-  push:
-    branches:
-      - build
-
+  # push:
+  #   branches:
+  #     - build
+  workflow_dispatch:
 jobs:
   docker:
     runs-on: ubuntu-latest
