--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,36 +1,25 @@
-name: Build Docker Container
+name: Build
 
 on:
-  # push:
-  #   branches:
-  #     - build
   workflow_dispatch:
+
 jobs:
   docker:
     runs-on: ubuntu-latest
-    env:
-      VERSION: 7.6.1
-      ANSIBLE_VERSION: 2.14
     steps:
-      # - name: Check out repository
-      #   uses: actions/checkout@v4
-      #   with:
-      #     ref: build  
-          
-      # - name: Update requirements.txt with Ansible version
-      #   run: |
-      #     sed -i "s/^ansible-core==.*/ansible-core==${{ env.ANSIBLE_VERSION }}/" requirements.txt
+      - name: Check last branch
+        id: get_version
+        run: |
+          VERSION=$(curl -s https://api.github.com/repos/confluentinc/cp-ansible/releases | jq -r '.[].tag_name' | sed 's/^v//' | sort | tail -n 1)
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-      # - name: Verify requirements.txt
-      #   run: cat requirements.txt
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
+      
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Login to Docker Hub
+      
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
