--- a/.github/workflows/schedule-trigger.yml
+++ b/.github/workflows/schedule-trigger.yml
@@ -24,7 +24,7 @@ jobs:
               const response = await github.rest.actions.createWorkflowDispatch({
                 owner: owner,
                 repo: repo,
-                workflow_id: 'maintenance.yml',  # Ensure this matches the workflow file name
+                workflow_id: 'build.yml',  # Ensure this matches the workflow file name
                 ref: 'build'  # Ensure this matches the target branch
               });
               console.log('Dispatch response:', response);
