--- a/.github/workflows/schedule-trigger.yml
+++ b/.github/workflows/schedule-trigger.yml
@@ -8,25 +8,17 @@ on:
       - main  # Replace with your default branch name
   workflow_dispatch:
 
+
 jobs:
   trigger:
     runs-on: ubuntu-latest
     steps:
-      - name: Trigger Non-Default Branch Workflow
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-          script: |
-            const { owner, repo } = context.repo;
-            console.log(`Owner: ${owner}, Repo: ${repo}`);
-            try {
-              const response = await github.rest.actions.createWorkflowDispatch({
-                owner: owner,
-                repo: repo,
-                workflow_id: 'maintenance.yml',  # Ensure this matches the workflow file name
-                ref: 'build'  # Ensure this matches the target branch
-              });
-              console.log('Dispatch response:', response);
-            } catch (error) {
-              console.error('Error:', error);
-            }
+      - name: Trigger Non-Default Branch Workflow via API
+        env:
+          PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        run: |
+          curl -X POST \
+            -H "Accept: application/vnd.github.v3+json" \
+            -H "Authorization: token $PERSONAL_ACCESS_TOKEN" \
+            https://api.github.com/repos/MosheBlumbergX/ansibleAsDocker/actions/workflows/build.yml/dispatches \
+            -d '{"ref":"build"}'
