--- a/.github/workflows/manualBuild.yml
+++ b/.github/workflows/manualBuild.yml
@@ -1,9 +1,9 @@
 name: Build Docker Container
 
 on:
-  # push:
-  #   branches:
-  #     - build
+  push:
+    branches:
+      - build
   workflow_dispatch:
 jobs:
   docker:
