--- a/.github/workflows/schedule-trigger.yml
+++ b/.github/workflows/schedule-trigger.yml
@@ -2,7 +2,7 @@ name: Schedule Trigger
 
 on:
   schedule:
-    - cron: '5 0 * * *'  # At 00:05 (5 minutes after midnight) every day
+    - cron: '5 3 * * *'  # At 03:05am every day
   push:
     branches:
       - main  # Replace with your default branch name
