--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,10 @@ name: Echo Date
 on:
   workflow_dispatch:
 
-
 jobs:
   trigger:
     runs-on: ubuntu-latest
     steps:
       - name: Echo my Date
         run: |
-          Echo "Invoke from main" on " " date
+          echo "Invoke from main on $(date)"
