--- a/.github/workflows/manualBuild.yml
+++ b/.github/workflows/manualBuild.yml
@@ -12,25 +12,17 @@ jobs:
       VERSION: 7.6.1
       ANSIBLE_VERSION: 2.14
     steps:
-      # - name: Check out repository
-      #   uses: actions/checkout@v4
-      #   with:
-      #     ref: build  
-          
-      # - name: Update requirements.txt with Ansible version
-      #   run: |
-      #     sed -i "s/^ansible-core==.*/ansible-core==${{ env.ANSIBLE_VERSION }}/" requirements.txt
+      - name: Echo my Date
+        run: |
+          echo "Invoke from main on $(date)"
 
-      # - name: Verify requirements.txt
-      #   run: cat requirements.txt
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
+      
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Login to Docker Hub
+      
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
